# tgdpwdgen

./: .gitignore  CMakeLists.txt  README.md  libtaggerd.c  libtaggerd.h  libtaggerdgui.c  main.c  tgdpwdgen.c
code/: libtaggerd.c  libtaggerdgui.c  tgdpwdgen.c  tgdpwdgengui.c
headers/: libtaggerdgui.h  tgdpwdgen.h  tgdpwdgengui.h
resources/: style.css  window.ui
